--- a/menu.html
+++ b/menu.html
@@ -52,10 +52,10 @@
                 <div class="align-self-end">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Cadastre - se</a>
+                            <a href="menu.html" class="nav-link">Cadastre - se</a>
                         </li>
                         <li class="nav-item">
-                            <a href="login.html" class="nav-link">Login</a>
+                            <a href="menu.html" class="nav-link">Login</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link"><img src="imagens/icon-compras.png" id="icon-compras"></a>
@@ -65,13 +65,72 @@
             </div>
         </div>
     </nav>
+     <!--Parte de baixo são html de login e inscrição-->
+    <div class="parte-login">
+        <div class="wrapper">
+            <div class="title-text">
+              <div class="title login">Conecta</div>
+              <div class="title signup">Formulário de inscrição</div>
+            </div>
+            <div class="form-container">
+              <div class="slide-controls">
+                <input type="radio" name="slide" id="login" checked>
+                <input type="radio" name="slide" id="signup">
+                <label for="login" class="slide login">Login</label>
+                <label for="signup" class="slide signup">Inscreva-se</label>
+                <div class="slider-tab"></div>
+              </div>
+              <div class="form-inner">
+                <form action="#" class="login">
+                  <div class="field">
+                    <input type="text" placeholder="Endereço de e-mail" required>
+                  </div>
+                  <div class="field">
+                    <input type="Senha" placeholder="Senha" required>
+                  </div>
+                  <div class="pass-link"><a href="#">Esqueceu sua senha ?</a></div>
+                  <div class="field btn">
+                    <div class="btn-layer"></div>
+                    <input type="submit" value="Login">
+                  </div>
+                  <div class="signup-link">Não é um menbror? <a href="#">Inscreva-se agora</a></div>
+                </form>
+                <form action="#" class="Inscreva-se">
+                  <div class="field">
+                    <input type="text" placeholder="Endereço de e-mail" required>
+                  </div>
+                  <div class="field">
+                    <input type="password" placeholder="Senha" required>
+                  </div>
+                  <div class="field">
+                    <input type="password" placeholder="Confimar Senha" required>
+                  </div>
+                  <div class="field btn">
+                    <div class="btn-layer"></div>
+                    <input type="submit" value="Inscreva-se">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+    </div>
+    
+      <script  src="javascript/loginscript.js"></script>
     <style>
+        //*css de menu*//
         #logo {
             max-width: 100px;
         }
+        #menu{
+            position: fixed;
+            margin-top: -6%;
+        }
 
-        #menu {
+        .container{
             background-color: #C0C0C0;
+            position: fixed;
+            margin: -25%;       
+
         }
 
         #icon-compras {
@@ -80,13 +139,14 @@
         }
 
         #icon_pesquisa {
-            width: 20px;
+            width: 24px;
         }
 
         .barra-pesquisa {
-            width: 350px;
+            width: 330px;
+            height: 35px;
             border-radius: 0.6em;
-            margin-top: 3px;
+            margin-top: 10px;
         }
 
         .nav-item .nav-link {
@@ -96,6 +156,199 @@
         .nav-item .nav-link:hover {
             color: #ffffff;
         }
+        @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+
+        //*Parte de baixo é css de login e inscrição*//
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+html,
+.parte-login{
+  display: grid;
+  height: 100%;
+  width: 100%;
+  margin-top: 2%;
+  place-items: center;
+}
+::selection {
+  background: #1a75ff;
+  color: #ffffff;
+  margin-lef
+}
+.wrapper {
+  overflow: hidden;
+  max-width: 390px;
+  background: #ccc6d3;
+  padding: 10px;
+  border-radius:25px;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+}
+.wrapper .title-text {
+  display: flex;
+  width: 200%;
+}
+.wrapper .title {
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.wrapper .slide-controls {
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid rgb(156, 149, 149);
+  border-radius: 15px;
+}
+.slide-controls .slide {
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.6s ease;
+}
+.slide-controls label.signup {
+  color: #000;
+}
+.slide-controls .slider-tab {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 15px;
+  background: -webkit-linear-gradient(left, #19191a, #1a191a, #64576b, #333334);
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+input[type="radio"] {
+  display: none;
+}
+#signup:checked ~ .slider-tab {
+  left: 50%;
+}
+#signup:checked ~ label.signup {
+  color: #fff;
+  cursor: default;
+  user-select: none;
+}
+#signup:checked ~ label.login {
+  color: #000;
+}
+#login:checked ~ label.signup {
+  color: #000;
+}
+#login:checked ~ label.login {
+  cursor: default;
+  user-select: none;
+}
+.wrapper .form-container {
+  width: 100%;
+  overflow: hidden;
+}
+.form-container .form-inner {
+  display: flex;
+  width: 200%;
+}
+.form-container .form-inner form {
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.form-inner form .field {
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+}
+.form-inner form .field input {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 15px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+.form-inner form .field input:focus {
+  border-color: #1a75ff;
+  /* box-shadow: inset 0 0 3px #fb6aae; */
+}
+.form-inner form .field input::placeholder {
+  color: #999;
+  transition: all 0.3s ease;
+}
+form .field input:focus::placeholder {
+  color: #1a75ff;
+}
+.form-inner form .pass-link {
+  margin-top: 5px;
+}
+.form-inner form .signup-link {
+  text-align: center;
+  margin-top: 30px;
+}
+.form-inner form .pass-link a,
+.form-inner form .signup-link a {
+  color: #1a75ff;
+  text-decoration: none;
+}
+.form-inner form .pass-link a:hover,
+.form-inner form .signup-link a:hover {
+  text-decoration: underline;
+}
+form .btn {
+  height: 50px;
+  width: 100%;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+form .btn .btn-layer {
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(
+    right,
+    #686567,
+    #222223,
+    #161717,
+    #d2bed6
+  );
+  border-radius: 15px;
+  transition: all 0.4s ease;
+}
+form .btn:hover .btn-layer {
+  left: 0;
+}
+form .btn input[type="submit"] {
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
