--- a/index.html
+++ b/index.html
@@ -47,137 +47,17 @@
     </header>
     
     <!-- Produto -->
-    <main class="mb-5 pd-5">
-        <div class="container">
-            <div class="row g-5">
+    <div class="container">
+        <div class="row g-5">
 
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Banner de anúncio -->
-                <section class="anuncio">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>PROMOÇÃO</h5>
-                                <h4>20% OFF</h4>
-                                <h4>IMPERDÍVEL</h4>
-                                <a href="#" class="btn btn-light btn-lg">Compre agora</a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
-                    </div>
-                </div>
-
-                <!-- Produto -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                    <div class="text-center">
-                        <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                        <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
-                        <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                        <hr>
-                        <div class="card-header"></div>
+            <!-- Produto -->
+            <div class="col-xll-2 col-lg-3 col-md-4 col-sm-5 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header">
                         <p class="card-title">Colar de misangas Azul e linha de pesca</p>
                         <h5 class="text-start">R$ 60,00</h5>
                         <p class="text-start">em 12x sem juros</p>
@@ -185,8 +65,113 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
+                <div class="text-center">
+                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
+                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <hr>
+                    <div class="card-header"></div>
+                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
+                    <h5 class="text-start">R$ 60,00</h5>
+                    <p class="text-start">em 12x sem juros</p>
+                    <p class="text-success text-lg-end">Frete gratis</p>
+                </div>
+            </div>
         </div>
-    </main>
+    </div>
     <!-- Rodapé -->
     <div class="rodape"></div>
 
